--- a/Degree recognition code.ipynb
+++ b/Degree recognition code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "ac8984eb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "id": "996d464b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "id": "ffd2c574",
    "metadata": {},
    "outputs": [],
@@ -38,37 +38,28 @@
     "#value: list of corresponding re patterns\n",
     "\n",
     "class MatchPatterns(Enum):\n",
-    "    MD = [r'Doctor of Medicine',r'(MD)',r'(M.D.)',r'^MD$',r'^M.D.$']\n",
-    "    PHD = [r'P\\.?[Hh]\\.?D',r'Doctor',r'博士']\n",
-    "    MASTER = [r'[Mm]aster',r'硕士',r'碩士']\n",
-    "    BACHELOR = [r'[bB]achelor',r'本科',r'学士',r'^B\\.?[SAE]']\n",
-    "    ASSOCIATE = [r'[aA]ssociate',r'[aA]ss']\n",
-    "    HIGH_SCHOOL = [r'[hH]igh [sS]chool']\n"
+    "    MD = re.compile(r'(Doctor of Medicine)|(MD)|(M.D.)|(^MD$)|(^M.D.$)')\n",
+    "    PHD = re.compile(r'(P\\.?[Hh]\\.?D)|(Doctor)|(博士)')\n",
+    "    MASTER = re.compile(r'([Mm]aster)|(硕士)|(碩士)')\n",
+    "    BACHELOR = re.compile(r'([bB]achelor)|(本科)|(学士)|(^B\\.?[SAE])')\n",
+    "    ASSOCIATE = re.compile(r'([aA]ssociate)|([aA]ss)')\n",
+    "    HIGH_SCHOOL = re.compile(r'[hH]igh [sS]chool')\n",
+    "    \n",
+    "    \n",
+    "    #Function for checking which level of degree the str indicates\n",
+    "    #Takes parameter string\n",
+    "    #Returns the degree level or empty string if not recognized        \n",
+    "    @staticmethod\n",
+    "    def match_degree(str):\n",
+    "        for pattern in MatchPatterns:\n",
+    "            if pattern.value.search(str):\n",
+    "                return pattern.name\n",
+    "        return \"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "9406f267",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Function for checking which level of degree the str indicates\n",
-    "#Takes two parameter: the string and the matchpattern in enum type\n",
-    "#Returns the degree level or empty string if not recognized\n",
-    "\n",
-    "def match_degree(str, match_patterns):\n",
-    "    for match_pattern in match_patterns:\n",
-    "        name = match_pattern.name\n",
-    "        patterns = match_pattern.value\n",
-    "        if any(re.search(pattern, str) for pattern in patterns):\n",
-    "            return name\n",
-    "    return ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "id": "6930a505",
    "metadata": {},
    "outputs": [],
@@ -76,14 +67,12 @@
     "#Generate the degree pattern matching result on the target data\n",
     "#Stored in list 'result'\n",
     "\n",
-    "result = []\n",
-    "for x in data:\n",
-    "    result.append(match_degree(x ,MatchPatterns))"
+    "result = [MatchPatterns.match_degree(x) for x in data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "id": "2e45e9f2",
    "metadata": {},
    "outputs": [],
@@ -98,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "id": "923a3962",
    "metadata": {},
    "outputs": [
