--- a/Degree recognition code.ipynb
+++ b/Degree recognition code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ac8984eb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "996d464b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ffd2c574",
    "metadata": {},
    "outputs": [],
@@ -37,13 +37,19 @@
     "#name: degrees\n",
     "#value: list of corresponding re patterns\n",
     "\n",
-    "class MatchPatterns(Enum):\n",
-    "    MD = re.compile(r'(Doctor of Medicine)|(MD)|(M.D.)|(^MD$)|(^M.D.$)')\n",
-    "    PHD = re.compile(r'(P\\.?[Hh]\\.?D)|(Doctor)|(博士)')\n",
-    "    MASTER = re.compile(r'([Mm]aster)|(硕士)|(碩士)')\n",
-    "    BACHELOR = re.compile(r'([bB]achelor)|(本科)|(学士)|(^B\\.?[SAE])')\n",
-    "    ASSOCIATE = re.compile(r'([aA]ssociate)|([aA]ss)')\n",
-    "    HIGH_SCHOOL = re.compile(r'[hH]igh [sS]chool')\n",
+    "class ReObject(Enum):\n",
+    "    def __new__(cls, restr):\n",
+    "        obj = object.__new__(cls)\n",
+    "        obj._value_ = re.compile(restr)\n",
+    "        return obj\n",
+    "\n",
+    "class MatchPatterns(ReObject):\n",
+    "    MD = (r'(Doctor of Medicine)|(MD)|(M.D.)|(^MD$)|(^M.D.$)')\n",
+    "    PHD = (r'(P\\.?[Hh]\\.?D)|(Doctor)|(博士)')\n",
+    "    MASTER = (r'([Mm]aster)|(硕士)|(碩士)')\n",
+    "    BACHELOR = (r'([bB]achelor)|(本科)|(学士)|(^B\\.?[SAE])')\n",
+    "    ASSOCIATE = (r'([aA]ssociate)|([aA]ss)')\n",
+    "    HIGH_SCHOOL = (r'[hH]igh [sS]chool')\n",
     "    \n",
     "    \n",
     "    #Function for checking which level of degree the str indicates\n",
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6930a505",
    "metadata": {},
    "outputs": [],
@@ -72,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2e45e9f2",
    "metadata": {},
    "outputs": [],
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "923a3962",
    "metadata": {},
    "outputs": [
